--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -53,7 +53,6 @@
           <li><a href="services.html">企业责任</a></li>
           <li><a href="portfolio.html">投资者</a></li>
           <li><a href="contact.html">媒体</a></li>
-          <li><a href="说明.html">说明</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
